Fix blink_perf.css.CSSPropertySetterGetter failure

LayoutBoxModelObject::styleWillChange() assumed hasLayer() when it
sees StyleDifference::needsPaintInvalidationSubtree().
https://codereview.chromium.org/1950573003/ broke the assumption.

Now check hasLayer().

Added a test based on blink_perf.css.CSSPropertySetterGetter.

BUG=611060
TEST=fast/css/css-property-setter-getter.html
R=trchen@chromium.org

Review URL: https://codereview.chromium.org/1965893007 .

Cr-Commit-Position: refs/heads/master@{#393018}

Former-commit-id: 3a05db510a333ebcd1724213d4f7a4cbea2e73a7